[gd_scene load_steps=73 format=3 uid="uid://cgef7vdhu6v0f"]

[ext_resource type="Script" uid="uid://b6itiqqmge8hl" path="res://mine.gd" id="1_i6hay"]
[ext_resource type="Texture2D" uid="uid://dxqfgtr44mpk" path="res://space/meteor_large.png" id="2_i213m"]
[ext_resource type="Texture2D" uid="uid://dv1lluov67q3c" path="res://red_explosion_2048.png" id="3_i213m"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6kowu"]
radius = 23.0217

[sub_resource type="CircleShape2D" id="CircleShape2D_02dhr"]
radius = 31.3209

[sub_resource type="CircleShape2D" id="CircleShape2D_pgv21"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4fn8o"]
radius = 56.0

[sub_resource type="AtlasTexture" id="AtlasTexture_vanlv"]
atlas = ExtResource("3_i213m")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_w3yfb"]
atlas = ExtResource("3_i213m")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_2wuje"]
atlas = ExtResource("3_i213m")
region = Rect2(512, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_5adda"]
atlas = ExtResource("3_i213m")
region = Rect2(768, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_cjwmg"]
atlas = ExtResource("3_i213m")
region = Rect2(1024, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_tw88y"]
atlas = ExtResource("3_i213m")
region = Rect2(1280, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_tokd0"]
atlas = ExtResource("3_i213m")
region = Rect2(1536, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_gm1v3"]
atlas = ExtResource("3_i213m")
region = Rect2(1792, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_0j76v"]
atlas = ExtResource("3_i213m")
region = Rect2(0, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_he5w1"]
atlas = ExtResource("3_i213m")
region = Rect2(256, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_iyudx"]
atlas = ExtResource("3_i213m")
region = Rect2(512, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_3d36j"]
atlas = ExtResource("3_i213m")
region = Rect2(768, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2mil"]
atlas = ExtResource("3_i213m")
region = Rect2(1024, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_1dlvx"]
atlas = ExtResource("3_i213m")
region = Rect2(1280, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_q3sh3"]
atlas = ExtResource("3_i213m")
region = Rect2(1536, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_hc2w7"]
atlas = ExtResource("3_i213m")
region = Rect2(1792, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_15uvl"]
atlas = ExtResource("3_i213m")
region = Rect2(0, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_o1y2t"]
atlas = ExtResource("3_i213m")
region = Rect2(256, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_ctaob"]
atlas = ExtResource("3_i213m")
region = Rect2(512, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_u84cq"]
atlas = ExtResource("3_i213m")
region = Rect2(768, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_jdsj7"]
atlas = ExtResource("3_i213m")
region = Rect2(1024, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_ddhjl"]
atlas = ExtResource("3_i213m")
region = Rect2(1280, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_jvd3e"]
atlas = ExtResource("3_i213m")
region = Rect2(1536, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_ddy2a"]
atlas = ExtResource("3_i213m")
region = Rect2(1792, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_cxqiy"]
atlas = ExtResource("3_i213m")
region = Rect2(0, 768, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_gg51a"]
atlas = ExtResource("3_i213m")
region = Rect2(256, 768, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_01qrh"]
atlas = ExtResource("3_i213m")
region = Rect2(512, 768, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_7jsk4"]
atlas = ExtResource("3_i213m")
region = Rect2(768, 768, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_omwcn"]
atlas = ExtResource("3_i213m")
region = Rect2(1024, 768, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_nk3um"]
atlas = ExtResource("3_i213m")
region = Rect2(1280, 768, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_7vuvr"]
atlas = ExtResource("3_i213m")
region = Rect2(1536, 768, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_w7vye"]
atlas = ExtResource("3_i213m")
region = Rect2(1792, 768, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_w2ue4"]
atlas = ExtResource("3_i213m")
region = Rect2(0, 1024, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_wiuhu"]
atlas = ExtResource("3_i213m")
region = Rect2(256, 1024, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_0rri2"]
atlas = ExtResource("3_i213m")
region = Rect2(512, 1024, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_rictn"]
atlas = ExtResource("3_i213m")
region = Rect2(768, 1024, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_baqep"]
atlas = ExtResource("3_i213m")
region = Rect2(1024, 1024, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_m8d1o"]
atlas = ExtResource("3_i213m")
region = Rect2(1280, 1024, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_07t4d"]
atlas = ExtResource("3_i213m")
region = Rect2(1536, 1024, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_p6tvm"]
atlas = ExtResource("3_i213m")
region = Rect2(1792, 1024, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_ps42g"]
atlas = ExtResource("3_i213m")
region = Rect2(0, 1280, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_bhqr0"]
atlas = ExtResource("3_i213m")
region = Rect2(256, 1280, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_mkgcg"]
atlas = ExtResource("3_i213m")
region = Rect2(512, 1280, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_1w6xm"]
atlas = ExtResource("3_i213m")
region = Rect2(768, 1280, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_d7h6l"]
atlas = ExtResource("3_i213m")
region = Rect2(1024, 1280, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_yhnuj"]
atlas = ExtResource("3_i213m")
region = Rect2(1280, 1280, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_gftwx"]
atlas = ExtResource("3_i213m")
region = Rect2(1536, 1280, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_viek5"]
atlas = ExtResource("3_i213m")
region = Rect2(1792, 1280, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_0c06k"]
atlas = ExtResource("3_i213m")
region = Rect2(0, 1536, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_dbh70"]
atlas = ExtResource("3_i213m")
region = Rect2(256, 1536, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_s81a1"]
atlas = ExtResource("3_i213m")
region = Rect2(512, 1536, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_qyfes"]
atlas = ExtResource("3_i213m")
region = Rect2(768, 1536, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_1umjs"]
atlas = ExtResource("3_i213m")
region = Rect2(1024, 1536, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_b7vwn"]
atlas = ExtResource("3_i213m")
region = Rect2(1280, 1536, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_yifso"]
atlas = ExtResource("3_i213m")
region = Rect2(1536, 1536, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5k1x"]
atlas = ExtResource("3_i213m")
region = Rect2(1792, 1536, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_11xvn"]
atlas = ExtResource("3_i213m")
region = Rect2(0, 1792, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_acfqj"]
atlas = ExtResource("3_i213m")
region = Rect2(256, 1792, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_pj7u1"]
atlas = ExtResource("3_i213m")
region = Rect2(512, 1792, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1u5n"]
atlas = ExtResource("3_i213m")
region = Rect2(768, 1792, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_5fqg8"]
atlas = ExtResource("3_i213m")
region = Rect2(1024, 1792, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_5q44d"]
atlas = ExtResource("3_i213m")
region = Rect2(1280, 1792, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_wc4an"]
atlas = ExtResource("3_i213m")
region = Rect2(1536, 1792, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_8vajs"]
atlas = ExtResource("3_i213m")
region = Rect2(1792, 1792, 256, 256)

[sub_resource type="SpriteFrames" id="SpriteFrames_83ml8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vanlv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w3yfb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2wuje")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5adda")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cjwmg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tw88y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tokd0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gm1v3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0j76v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_he5w1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iyudx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3d36j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2mil")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1dlvx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q3sh3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hc2w7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_15uvl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o1y2t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ctaob")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u84cq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jdsj7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ddhjl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jvd3e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ddy2a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cxqiy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gg51a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_01qrh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7jsk4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_omwcn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nk3um")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7vuvr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w7vye")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w2ue4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wiuhu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0rri2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rictn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_baqep")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m8d1o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_07t4d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p6tvm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ps42g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bhqr0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mkgcg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1w6xm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d7h6l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yhnuj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gftwx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_viek5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0c06k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dbh70")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s81a1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qyfes")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1umjs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b7vwn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yifso")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5k1x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_11xvn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_acfqj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pj7u1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1u5n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5fqg8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5q44d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wc4an")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8vajs")
}],
"loop": false,
"name": &"explosion",
"speed": 32.0
}]

[node name="mine" type="CharacterBody2D"]
collision_layer = 256
collision_mask = 256
script = ExtResource("1_i6hay")

[node name="mine_sprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
modulate = Color(1, 0.107802, 0.371878, 1)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_i213m")

[node name="mine_area" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="mine_area"]
shape = SubResource("CircleShape2D_6kowu")

[node name="soft_collision" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="soft_collision"]
shape = SubResource("CircleShape2D_02dhr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_pgv21")

[node name="explosion_area" type="Area2D" parent="."]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="explosion_area"]
shape = SubResource("CircleShape2D_4fn8o")
debug_color = Color(0.706533, 0.488265, 0, 0.42)

[node name="animated_sprite_2d" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
sprite_frames = SubResource("SpriteFrames_83ml8")
animation = &"explosion"
frame = 63
frame_progress = 1.0
